SERVER-66548 Add support for dependency tracking to $redact

(cherry picked from commit cc4968771221658d66ff42ed2fb861656c5683ca)