src/mongo/db/pipeline/document_source_redact.h
@@ -72,6 +72,16 @@ public:
         return _expression;
     }
 
+    DepsTracker::State getDependencies(DepsTracker* deps) const final {
+        // Add the dependencies of the expression but all we really care about is variable
+        // references for correlation analysis. The field references may get populated but we'll
+        // still require the full document since the $redact may descend arbitrary levels of nested
+        // documents that is only known at runtime.
+        _expression->addDependencies(deps);
+        deps->needWholeDocument = true;
+        return DepsTracker::State::SEE_NEXT;
+    }
+
 private:
     DocumentSourceRedact(const boost::intrusive_ptr<ExpressionContext>& expCtx,
                          const boost::intrusive_ptr<Expression>& previsit);
