jstests/aggregation/sources/lookup/lookup_non_correlated_prefix.js
@@ -8,6 +8,8 @@
 (function() {
 "use strict";
 
+load("jstests/aggregation/extras/utils.js");  // for arrayEq
+
 const testColl = db.lookup_non_correlated_prefix;
 testColl.drop();
 const joinColl = db.lookup_non_correlated_prefix_join;
@@ -77,6 +79,39 @@ cursor.toArray().forEach(user => {
     assert.eq(1, joinedDocs.length);
     assert.eq(user['_id'], joinedDocs[0].owner);
 });
+
+// Test for a non-correlated prefix followed by a $facet pipeline that contains a correlated
+// variable reference.
+cursor = testColl.aggregate([
+    {
+        $lookup: {
+            as: 'items_check',
+            from: joinColl.getName(),
+            let : {id: '$_id'},
+            pipeline: [
+                {$match: {owner: "user_1"}},
+                {
+                    $facet: {
+                        all: [{
+                            $redact: {
+                                $cond:
+                                    {if: {$eq: ["$$id", "user_1"]}, then: "$$KEEP", else: "$$PRUNE"}
+                            }
+                        }],
+                    },
+                },
+            ],
+        },
+    },
+]);
+res = cursor.toArray();
+assert(
+    arrayEq(res,
+            [
+                {"_id": "user_1", "items_check": [{"all": [{"_id": "item_1", "owner": "user_1"}]}]},
+                {"_id": "user_2", "items_check": [{"all": []}]}
+            ]),
+    res);
 
 // SERVER-57000: Test handling of lack of correlation (addFields with empty set of columns)
 assert.doesNotThrow(() => testColl.aggregate([
